; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_friends_test.c_child_got_request.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_friends_test.c_child_got_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"OK\0Asending status to parent\00", align 1
@stdout = common dso_local global i32 0, align 4
@FIRST_FLAG = common dso_local global i32 0, align 4
@request_flags = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @child_got_request(i32* %0, i32* %1, i32* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = load i32, i32* @stdout, align 4
  %12 = call i32 @fputs(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* @stdout, align 4
  %14 = call i32 @fflush(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @m_addfriend_norequest(i32* %15, i32* %16)
  %18 = load i32, i32* @FIRST_FLAG, align 4
  %19 = load i32, i32* @request_flags, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* @request_flags, align 4
  ret void
}

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @m_addfriend_norequest(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
